made css issue in container max-width stretch

--- a/css/style.css
+++ b/css/style.css
@@ -502,6 +502,7 @@ section {
     max-height: 50vh;
     padding: 1em;
     overflow: hidden;
+    max-width: stretch;
     
 }
 
